--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="Cnt-img">
                     <div class="box">
                         <div class="banner-img">
-                            <img src="Untitled-1.png" alt="" srcset="">
+                            <img src="https://res-console.cloudinary.com/drdf66del/thumbnails/v1/image/upload/v1717214488/c2FtcGxlcy9tYW4tb24tYS1zdHJlZXQ=/preview" alt="" srcset="">
                             
                         </div>
                     </div>
